# mpi_utilities

./: README.md  pyproject.toml  setup  setup.py
mpi4py_utilities/: __init__.py
mpi4py_utilities/src/: Allgather.py  Bcast.py  Gather.py  Irecv.py  Isend.py  Recv.py  Scatterv.py  Send.py  common.py
mpi_utilities/: __init__.py  common.py  mpi_dim.py  mpi_dims.py  numba_methods.py
mpi_utilities/array/: __init__.py  rechunk.py
mpi_utilities/chunking/: __init__.py  chunking.py
mpi_utilities/linalg/: __init__.py  dot.py  norm.py
mpi_utilities/maths/: __init__.py  kahan_sum.py  mean.py  median.py  quantile.py  std.py  var.py
mpi_utilities/mpi/: Allgather.py  Allgatherv.py  Allreduce.py  Bcast.py  Communicators.py  Gather.py  Gatherv.py  Irecv.py  Isend.py  Recv.py  Reduce.py  Scatter.py  Scatterv.py  Send.py  __init__.py  communication.py  dtype.py  operator.py
mpi_utilities/random/: __init__.py  choice.py  prng.py
mpi_utilities/sorting/: __init__.py  optimal_pivots.py  select.py  sort.py  top_k.py
mpi_utilities/src/: Allgather.py  Allgatherv.py  Bcast.py  Gather.py  Gatherv.py  Irecv.py  Isend.py  Recv.py  Reduce.py  Scatter.py  Scatterv.py  Send.py  common.py  numba_methods.py
test/: test_mpi.py
