[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpi_utilities"
version = "1.0.1"
description = "Utility functions for mpi4py"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Leon Foks", email = "leonfoks@gmail.com" }
]
dependencies = ["numpy"]

classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
]

[tool.setuptools.packages.find]
where = ["."]